kubernetes/cluster/flux-operator-mcp/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator-mcp
spec:
  hostnames:
    - flux-mcp.jetersen.dev
  parentRefs:
    - name: envoy-proxy
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: flux-operator-mcp
          port: 9090
